extends Control



func _on_ling_bo_wei_bu_pressed() -> void:
	get_tree().change_scene_to_file("res://Scences/ling_bo_wei_bu.tscn")
func _on_yi_yi_dui_ying_pressed() -> void:
	get_tree().change_scene_to_file("res://Scences/Yi_Yi_Dui_Ying.tscn")
func _on_shuyi_shu_pressed() -> void:
	get_tree().change_scene_to_file("res://Scences/Shu_Yi_Shu.tscn")
func _on_ping_fen_qiu_se_pressed() -> void:
	get_tree().change_scene_to_file("res://Scences/ping_fen_qiu_se.tscn")
func _on_tao_yuan_jie_yi_pressed() -> void:
	get_tree().change_scene_to_file("res://Scences/tao_yuan_jie_yi.tscn")
func _on_shun_qi_zi_ran_pressed() -> void:
	get_tree().change_scene_to_file("res://Scences/shun_qi_zi_ran.tscn")
func _on_he_jiu_bi_fen_pressed() -> void:
	get_tree().change_scene_to_file("res://Scences/he_jiu_bi_fen.tscn")
